# server/src/agents/dtos/create.agent.dto.ts
@@ -1,0 +1,9 @@
+import { IsString } from 'class-validator';
+
+export class CreateAgentDto {
+  @IsString()
+  name: string;
+
+  @IsString()
+  projectId: string;
+}
