# server/src/agents/dtos/created.agent.dto.ts
@@ -1,0 +1,21 @@
+import { IsDate, IsString } from 'class-validator';
+
+export class CreatedAgentDto {
+  @IsString()
+  id: string;
+
+  @IsString()
+  name: string;
+
+  @IsString()
+  projectId: string;
+
+  @IsString()
+  creatorId: string;
+
+  @IsDate()
+  createdAt: Date;
+
+  @IsDate()
+  updatedAt: Date;
+}
